--- a/src/ui/sequenceswidget.ui
+++ b/src/ui/sequenceswidget.ui
@@ -39,7 +39,14 @@
     </widget>
    </item>
    <item row="1" column="0" colspan="3">
-    <widget class="QWidget" name="sequenceItems" native="true"/>
+    <widget class="QListView" name="sequenceItems">
+     <property name="editTriggers">
+      <set>QAbstractItemView::NoEditTriggers</set>
+     </property>
+     <property name="viewMode">
+      <enum>QListView::ListMode</enum>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
