--- a/src/ui/sequenceswidget.ui
+++ b/src/ui/sequenceswidget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>356</width>
-    <height>104</height>
+    <height>124</height>
    </rect>
   </property>
   <layout class="QGridLayout" name="gridLayout">
@@ -39,13 +39,31 @@
     </widget>
    </item>
    <item row="1" column="0" colspan="3">
-    <widget class="QListView" name="sequenceItems">
+    <widget class="QTableView" name="sequenceItems">
      <property name="editTriggers">
       <set>QAbstractItemView::NoEditTriggers</set>
      </property>
-     <property name="viewMode">
-      <enum>QListView::ListMode</enum>
+     <property name="dragEnabled">
+      <bool>true</bool>
      </property>
+     <property name="selectionMode">
+      <enum>QAbstractItemView::SingleSelection</enum>
+     </property>
+     <property name="selectionBehavior">
+      <enum>QAbstractItemView::SelectRows</enum>
+     </property>
+     <property name="showGrid">
+      <bool>false</bool>
+     </property>
+     <property name="gridStyle">
+      <enum>Qt::SolidLine</enum>
+     </property>
+     <attribute name="horizontalHeaderStretchLastSection">
+      <bool>true</bool>
+     </attribute>
+     <attribute name="verticalHeaderVisible">
+      <bool>false</bool>
+     </attribute>
     </widget>
    </item>
   </layout>
