--- a/src/ui/sequenceswidget.ui
+++ b/src/ui/sequenceswidget.ui
@@ -11,34 +11,7 @@
    </rect>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
-    <spacer name="horizontalSpacer">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>205</width>
-       <height>20</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="0" column="1">
-    <widget class="QPushButton" name="addSequenceItem">
-     <property name="text">
-      <string>Add</string>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="2">
-    <widget class="QPushButton" name="clearSequence">
-     <property name="text">
-      <string>Remove All</string>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="0" colspan="3">
+   <item row="1" column="0" colspan="2">
     <widget class="QTableView" name="sequenceItems">
      <property name="editTriggers">
       <set>QAbstractItemView::NoEditTriggers</set>
@@ -65,6 +38,9 @@
       <bool>false</bool>
      </attribute>
     </widget>
+   </item>
+   <item row="0" column="0" colspan="2">
+    <widget class="QWidget" name="toolbarContainer" native="true"/>
    </item>
   </layout>
  </widget>
