--- a/src/ui/sequenceswidget.ui
+++ b/src/ui/sequenceswidget.ui
@@ -25,6 +25,9 @@
      <property name="selectionBehavior">
       <enum>QAbstractItemView::SelectRows</enum>
      </property>
+     <property name="textElideMode">
+      <enum>Qt::ElideNone</enum>
+     </property>
      <property name="showGrid">
       <bool>false</bool>
      </property>
